syntax = "proto3";

package pb;

// Removed the import statement for "account.proto"
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/vantu-fit/saga-pattern/pb";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "Simple Bank API";
      version: "1.0";
      contact: {
        name: "Vantufit";
        url: "https://github.com/grpc-ecosystem/grpc-gateway";
        email: "dotu30257@gmail.com";
      };
    };
};

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}

message AuthResponse {
  bool valid = 1;
  string user_id = 2;
}

message Account {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string address = 5;
  string phone_number = 6;
  bool active = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp created_at = 9;
}

message CreateAccountRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string address = 4;
  string phone_number = 5;
  string password = 6;
}

message CreateAccountResponse {
  string access_token = 1;
  string refresh_token = 2;
  string session_id = 3;
  Account account = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  string session_id = 3;
  Account account = 4;
}


message GetAccountResponse {
  Account account = 1;
}

message OauthUser {
  string email = 1;
  string family_name = 2;
  string given_name = 3;
  string id = 4;
  string locale = 5;
  string name = 6;
  string picture = 7;
  bool verified_email = 8;
}

message OauthRequest {
  string state =1;
  string code = 2;
  string scope = 3;
  string authuser = 4;
  string prompt = 5;
}


service ServiceAccount {
    rpc Ping (PingRequest) returns (PingResponse){
        option (google.api.http) = {
                  post: "/api/v1/account/ping"
                  body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to test the connection.";
          summary: "Test connection";
        };
    }

    rpc Auth (google.protobuf.Empty) returns (AuthResponse){}

    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse){
        option (google.api.http) = {
                  post: "/api/v1/account/register"
                  body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to create a new account.";
          summary: "Create new account";
        };
    }
    rpc Login (LoginRequest) returns (LoginResponse){
        option (google.api.http) = {
          
                  post: "/api/v1/account/login"
                  body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to login to your account.";
          summary: "Login to account";
        };
    }

    rpc GetAccount (google.protobuf.Empty) returns (GetAccountResponse){
        option (google.api.http) = {
                  get: "/api/v1/account/customer/personal"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to get account information.";
          summary: "Get account information";
        };
    } 

    rpc Oauth (OauthRequest) returns (LoginResponse){
        option (google.api.http) = {
                  get: "/api/v1/account/google/callback"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to get account information.";
          summary: "Get account information";
        };
    }

}